syntax = "proto3";
package common;
option go_package = "github.com/go-park-mail-ru/2022_1_Wave/internal/app/microservices/common/commonProto";

message IntResponse {
  int64 Data = 1;
}

message IdArg {
  int64 Id = 1;
}